--- a/package.json
+++ b/package.json
@@ -4,18 +4,19 @@
     "description": "Yakit is for yaklang.io Electron GUI Entry",
     "main": "app/main/index.js",
     "scripts": {
+        "cli": "node ./cli/cli.mjs",
         "start-electron": "electron .",
         "install-link-render": "cd app/renderer/engine-link-startup && yarn install",
         "install-render": "cd app/renderer/src/main && yarn install",
         "render-yarn": "cd app/renderer/src/main && yarn",
-        "render-cli": "cd app/renderer/src/main && yarn render-cli",
+        "render-cli": "cd app/renderer/src/main && yarn cli",
         "start-link-render": "cd app/renderer/engine-link-startup && yarn electron-render",
         "start-link-render-enterprise": "cd app/renderer/engine-link-startup && yarn electron-render-enterprise",
         "start-link-render-simple-enterprise": "cd app/renderer/engine-link-startup && yarn electron-render-simple-enterprise",
         "start-link-render-irify": "cd app/renderer/engine-link-startup && yarn electron-render-irify",
         "start-link-render-irify-enterprise": "cd app/renderer/engine-link-startup && yarn electron-render-irify-enterprise",
         "start-link-render-memfit": "cd app/renderer/engine-link-startup && yarn electron-render-memfit",
-        "start-render": "cd app/renderer/src/main && yarn electron-render",
+        "start-render": "concurrently \"cd app/renderer/engine-link-startup && yarn cli memfit\" \"cd app/renderer/src/main && yarn climemfit\"",
         "start-render-enterprise": "cd app/renderer/src/main && yarn electron-render-enterprise",
         "start-render-simple-enterprise": "cd app/renderer/src/main && yarn electron-render-simple-enterprise",
         "start-render-irify": "cd app/renderer/src/main && yarn electron-render-irify",
@@ -122,10 +123,14 @@
     "license": "ISC",
     "devDependencies": {
         "@electron/notarize": "^2.5.0",
+        "chalk": "5.6.2",
+        "commander": "13.1.0",
         "concurrently": "^6.2.0",
         "electron": "27.0.0",
         "electron-builder": "23.6.0",
         "env-cmd": "^10.1.0",
+        "execa": "8.0.0",
+        "inquirer": "12.11.1",
         "npm-run-all": "^4.1.5",
         "protoc-gen-ts": "^0.3.9",
         "wait-on": "^6.0.0",
