--- a/package.json
+++ b/package.json
@@ -115,6 +115,7 @@
         "release-irify": "node scripts/release-irify.js",
         "release-memfit": "node scripts/release-memfit.js",
         "release-yakit": "node scripts/prod-pack.js",
+        "test:vitest": "vitest",
         "i18n:check": "node scripts/locale-parity.js"
     },
     "keywords": [],
@@ -122,12 +123,17 @@
     "license": "ISC",
     "devDependencies": {
         "@electron/notarize": "^2.5.0",
+        "@testing-library/jest-dom": "^5.16.5",
         "concurrently": "^6.2.0",
         "electron": "27.0.0",
         "electron-builder": "23.6.0",
         "env-cmd": "^10.1.0",
+        "jsdom": "20",
         "npm-run-all": "^4.1.5",
         "protoc-gen-ts": "^0.3.9",
+        "vite": "4.4.9",
+        "vite-tsconfig-paths": "3.5.0",
+        "vitest": "0.34.6",
         "wait-on": "^6.0.0",
         "yarn": "^1.22.11"
     },
